remove cxx-compiler and add rapidjson

--- a/environment-3.13.yml
+++ b/environment-3.13.yml
@@ -9,6 +9,7 @@ dependencies:
   - ninja
   - clang==15.0.7
   - llvmdev==15.0.7
-  - cxx-compiler
   - tbb-devel
   - pybind11-stubgen
+  - rapidjson
+  
