--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=75.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "7.8.1.2"
+version = "X.X.X.X"
 description = "Python wrapper for Open CASCADE Technology 3D geometry library based on the official CadQuery/OCP sources"
 authors = [{ name = "Bernhard Walter" }]
 requires-python = ">=3.10,<3.14"
