add conda path to occt libs

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -93,6 +93,7 @@ jobs:
           log-level: warning
           init-shell: ${{ matrix.shells }}
           cache-downloads: true
+          cache-environment: true
 
       # - - -
 
@@ -507,6 +508,7 @@ jobs:
           log-level: warning
           init-shell: ${{ matrix.shells }}
           cache-downloads: true
+          cache-environment: true
 
       # - - -
 
@@ -598,7 +600,7 @@ jobs:
                 -DPython3_ROOT_DIR=$CONDA_PREFIX ^
                 -DPython_FIND_VIRTUALENV=ONLY ^
                 -DPython3_FIND_VIRTUALENV=ONLY ^
-                -DOCCT_LIB_DIR=..\occt\Library\bin\*.dll ^
+                -DOCCT_LIB_DIR=$CONDA_PREFIX\Library\bin\*.dll ^
                 -DPLATFORM=Windows ^
                 -B new -S . -G Ninja
           
@@ -722,6 +724,7 @@ jobs:
           log-level: warning
           init-shell: ${{ matrix.shells }}
           cache-downloads: true
+          cache-environment: true
 
       # - - -
 
