--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -593,13 +593,13 @@ jobs:
 
           set CC=clang.exe
           set CXX=clang.exe
-          tree /f $CONDA_PREFIX\Library\bin\
-          
+          tree /f %CONDA_PREFIX%\Library\bin\
+
           cmake -DPython_ROOT_DIR=$CONDA_PREFIX ^
                 -DPython3_ROOT_DIR=$CONDA_PREFIX ^
                 -DPython_FIND_VIRTUALENV=ONLY ^
                 -DPython3_FIND_VIRTUALENV=ONLY ^
-                -DOCCT_LIB_DIR=$CONDA_PREFIX\Library\bin\*.dll ^
+                -DOCCT_LIB_DIR=%CONDA_PREFIX%\Library\bin\*.dll ^
                 -DPLATFORM=Windows ^
                 -B new -S . -G Ninja
           
@@ -660,7 +660,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["macos-15"]
+        os: ["macos-13", "macos-15", "ubuntu-22.04"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -674,23 +674,23 @@ jobs:
             env: "MACOSX_DEPLOYMENT_TARGET=11.1"
             shells: "bash"
             ocp_tag: "macos-15"
-          # - os: "macos-13"
-          #   delocate: delocate
-          #   plat: macosx_11_1_x86_64
-          #   sed_i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          #   ocp_tag: "macos-15"
-          # - os: "ubuntu-22.04"
-          #   delocate: auditwheel patchelf
-          #   plat: manylinux_2_31_x86_64
-          #   sed_i: "sed -i"
-          #   compilers: ""
-          #   module: "OCP.*.so"
-          #   env: "DUMMY=0"
-          #   shells: "bash"
-          #   ocp_tag: "ubuntu-22.04"
+          - os: "macos-13"
+            delocate: delocate
+            plat: macosx_11_1_x86_64
+            sed_i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+            ocp_tag: "macos-15"
+          - os: "ubuntu-22.04"
+            delocate: auditwheel patchelf
+            plat: manylinux_2_31_x86_64
+            sed_i: "sed -i"
+            compilers: ""
+            module: "OCP.*.so"
+            env: "DUMMY=0"
+            shells: "bash"
+            ocp_tag: "ubuntu-22.04"
           # - os: "windows-2022"
           #   delocate: delvewheel
           #   plat: win_amd64
